--- a/src/notebooks/data/Generate_Customer_Account_Fields.ipynb
+++ b/src/notebooks/data/Generate_Customer_Account_Fields.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "385de5c4",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "# filepath: c:\\Repos\\Code\\SampleDataPrep\\src\\notebooks\\data\\Generate_Customer_Account_Fields.ipynb\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
@@ -57,7 +57,7 @@
     "# Configuration\n",
     "CUSTOMER_COUNT = 513  # Number of customers\n",
     "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
-    "OUTPUT_FILE = \"CustomerAccount_samples.csv\"\n",
+    "OUTPUT_FILE = \"CustomerAccount_Samples.csv\"\n",
     "\n",
     "# Create output directory\n",
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
