--- a/src/notebooks/data/Generate_Customer_Core_Fields.ipynb
+++ b/src/notebooks/data/Generate_Customer_Core_Fields.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "2f7d634e",
    "metadata": {},
    "outputs": [
@@ -131,10 +131,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🗑️ Removed existing file: C:\\temp\\samples\\Customer_core_fields.csv\n",
       "🎯 GENERATING COMPLETE CUSTOMER SAMPLE DATA\n",
       "Input: C:\\temp\\samples\\customer_names_unique_513.csv\n",
-      "Output: C:\\temp\\samples\\Customer_core_fields.csv\n",
+      "Output: C:\\temp\\samples\\Customer_Samples.csv\n",
       "==================================================\n",
       "📂 Reading input file: C:\\temp\\samples\\customer_names_unique_513.csv\n",
       "✅ File read successfully!\n",
@@ -163,7 +162,7 @@
     "INPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
     "INPUT_FILE = \"customer_names_unique_513.csv\"\n",
     "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
-    "OUTPUT_FILE = \"Customer_core_fields.csv\"\n",
+    "OUTPUT_FILE = \"Customer_Samples.csv\"\n",
     "\n",
     "# Create output directory\n",
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
@@ -543,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "d23a9590",
    "metadata": {},
    "outputs": [
@@ -630,7 +629,7 @@
       "   CID-009     Individual                   Standard  1964-10-02              2021-05-22     False     Jakob    Anhalt   Male (501) 555-0112           None     jakob@contoso.com           None     Sales\n",
       "   CID-010       Business                    Partner  1986-02-03              2020-02-01      True Elisabeth   Arcouet Female (937) 555-0173           None elisabeth@contoso.com           None     Sales\n",
       "\n",
-      "💾 CUSTOMER DATA SAVED TO: C:\\temp\\samples\\Customer_core_fields.csv\n",
+      "💾 CUSTOMER DATA SAVED TO: C:\\temp\\samples\\Customer_Samples.csv\n",
       "💾 TRADE NAME DATA SAVED TO: C:\\temp\\samples\\CustomerTradeName.csv\n",
       "📊 Trade Name Records: 160\n",
       "\n",
