--- a/src/notebooks/data/Generate_Product_Fields.ipynb
+++ b/src/notebooks/data/Generate_Product_Fields.ipynb
@@ -5,13 +5,13 @@
    "id": "71d4f224",
    "metadata": {},
    "source": [
-    "# Generate Product Sample Data\n",
+    "# Generate Product Fileds - Output Not Utilized \n",
     "\n",
     "## Overview\n",
     "This notebook generates sample data for the Product table with specific field distributions and business rules.\n",
     "\n",
     "## Output\n",
-    "- File: `C:\\temp\\samples\\Product_Special_Fields.csv`\n",
+    "- File: `C:\\temp\\samples\\Product_Special_Fields_NotUsed.csv`\n",
     "- Contains selected Product table fields with realistic distributions\n",
     "\n",
     "---"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fbbdffb9",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
     "# Configuration\n",
     "SAMPLE_SIZE = 295  # Number of product records to generate\n",
     "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
-    "OUTPUT_FILE = \"Product_Special_Fields.csv\"\n",
+    "OUTPUT_FILE = \"Product_Special_Fields_NotUsed.csv\"\n",
     "\n",
     "# Create output directory\n",
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
