--- a/src/notebooks/data/Generate_Product_Samples.ipynb
+++ b/src/notebooks/data/Generate_Product_Samples.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fbbdffb9",
    "metadata": {},
    "outputs": [
@@ -35,13 +35,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🗑️ Removed existing file: C:\\temp\\samples\\Product_samples.csv\n",
-      "🎯 GENERATING PRODUCT SAMPLE DATA\n",
-      "Sample Size: 295\n",
-      "Output: C:\\temp\\samples\\Product_samples.csv\n",
-      "==================================================\n",
-      "🔄 Generating field data...\n",
-      "✅ Data generation complete!\n"
+      "🎯 ENRICHING PRODUCT DATA WITH CATEGORY NAMES\n",
+      "Input Folder: C:\\temp\\samples\n",
+      "Product Input: Product_Input_Base.csv\n",
+      "Category Lookup: ProductCategory_48.csv\n",
+      "Output: Product_Samples.csv\n",
+      "============================================================\n",
+      "📂 Reading product input: C:\\temp\\samples\\Product_Input_Base.csv\n",
+      "✅ Product file read successfully!\n",
+      "📊 Shape: (315, 8)\n",
+      "📋 Columns: ['ProductID', 'Name', 'Color', 'StandardCost', 'ListPrice', 'Size', 'Weight', 'CategoryID']\n",
+      "\n",
+      "📂 Reading category lookup: C:\\temp\\samples\\ProductCategory_48.csv\n",
+      "✅ Category file read successfully!\n",
+      "📊 Shape: (48, 2)\n",
+      "📋 Columns: ['CategoryID', 'CategoryName']\n",
+      "\n",
+      "📖 Sample Product Data (First 5 rows):\n",
+      "   ProductID                       Name  Color  StandardCost  ListPrice Size  \\\n",
+      "0          1  HL Road Frame - Black, 58  Black     1059.3100    1431.50   58   \n",
+      "1          2    HL Road Frame - Red, 58    Red     1059.3100    1431.50   58   \n",
+      "2          3      Sport-100 Helmet, Red    Red       13.0863      34.99  NaN   \n",
+      "3          4    Sport-100 Helmet, Black  Black       13.0863      34.99  NaN   \n",
+      "4          5     Mountain Bike Socks, M  White        3.3963       9.50    M   \n",
+      "\n",
+      "    Weight  CategoryID  \n",
+      "0  1016.04          18  \n",
+      "1  1016.04          18  \n",
+      "2      NaN          35  \n",
+      "3      NaN          35  \n",
+      "4      NaN          27  \n",
+      "\n",
+      "📖 Sample Category Data (First 5 rows):\n",
+      "   CategoryID    CategoryName\n",
+      "0           1           Bikes\n",
+      "1           2      Components\n",
+      "2           3        Clothing\n",
+      "3           4     Accessories\n",
+      "4           5  Mountain Bikes\n",
+      "✅ Input files loaded successfully!\n"
      ]
     }
    ],
@@ -51,7 +83,7 @@
     "\n",
     "# Configuration\n",
     "INPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
-    "PRODUCT_INPUT_FILE = \"Product_Input.csv\"\n",
+    "PRODUCT_INPUT_FILE = \"Product_Input_Base.csv\"\n",
     "CATEGORY_LOOKUP_FILE = \"ProductCategory_48.csv\"\n",
     "OUTPUT_FILE = \"Product_Samples.csv\"\n",
     "\n",
@@ -100,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b8c7180b",
    "metadata": {},
    "outputs": [
@@ -109,45 +141,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📊 DATA DISTRIBUTION ANALYSIS\n",
+      "🔄 PERFORMING CATEGORY LOOKUP\n",
       "==================================================\n",
+      "✅ Using CategoryID for lookup\n",
+      "✅ Using 'CategoryName' as CategoryName\n",
       "\n",
-      "🎯 BrandName Distribution:\n",
-      "  Fabrikam       : 205 ( 69.5%)\n",
-      "  Alpine Ski House:  90 ( 30.5%)\n",
+      "🔗 Merging product data with category names...\n",
+      "✅ Merge completed!\n",
+      "📊 Original products: 315\n",
+      "📊 Enriched products: 315\n",
       "\n",
-      "🎯 CreatedDate Range:\n",
-      "  Earliest: 2020-01-01\n",
-      "  Latest  : 2020-12-30\n",
-      "\n",
-      "🎯 SellStartDate Range:\n",
-      "  Earliest: 2020-02-09\n",
-      "  Latest  : 2021-09-27\n",
-      "  Invalid dates (SellStart <= Created): 2\n",
-      "\n",
-      "🎯 SellEndDate Distribution:\n",
-      "  Discontinued:  11 (  3.7%)\n",
-      "  Active      : 284 ( 96.3%)\n",
-      "  End Date Range: 2022-01-14 to 2023-03-11\n",
-      "\n",
-      "📋 First 10 Sample Records:\n",
-      "ProductId ProductName        BrandName CreatedDate SellStartDate SellEndDate\n",
-      "    P-001   Product 1         Fabrikam  2020-09-20    2021-05-17            \n",
-      "    P-002   Product 2 Alpine Ski House  2020-02-22    2021-09-01            \n",
-      "    P-003   Product 3 Alpine Ski House  2020-02-29    2021-08-28            \n",
-      "    P-004   Product 4         Fabrikam  2020-04-17    2020-12-25            \n",
-      "    P-005   Product 5         Fabrikam  2020-01-05    2021-01-28            \n",
-      "    P-006   Product 6         Fabrikam  2020-04-12    2020-12-23            \n",
-      "    P-007   Product 7         Fabrikam  2020-07-14    2021-01-26            \n",
-      "    P-008   Product 8 Alpine Ski House  2020-09-18    2021-07-17            \n",
-      "    P-009   Product 9         Fabrikam  2020-12-30    2021-01-08            \n",
-      "    P-010  Product 10 Alpine Ski House  2020-12-15    2021-09-26            \n",
-      "\n",
-      "💾 SAVED TO: C:\\temp\\samples\\Product_samples.csv\n",
-      "📊 Total Records: 295\n",
-      "📈 Columns: ProductId, ProductName, BrandName, CreatedDate, SellStartDate, SellEndDate\n",
-      "\n",
-      "✅ Product sample data generation complete!\n"
+      "📖 Sample Enriched Data (First 10 rows):\n",
+      "   CategoryID CategoryName  ProductID                        Name  Color\n",
+      "0          18  Road Frames          1   HL Road Frame - Black, 58  Black\n",
+      "1          18  Road Frames          2     HL Road Frame - Red, 58    Red\n",
+      "2          35      Helmets          3       Sport-100 Helmet, Red    Red\n",
+      "3          35      Helmets          4     Sport-100 Helmet, Black  Black\n",
+      "4          27        Socks          5      Mountain Bike Socks, M  White\n",
+      "5          27        Socks          6      Mountain Bike Socks, L  White\n",
+      "6          35      Helmets          7      Sport-100 Helmet, Blue   Blue\n",
+      "7          23         Caps          8                AWC Logo Cap  Multi\n",
+      "8          25      Jerseys          9  Long-Sleeve Logo Jersey, S  Multi\n",
+      "9          25      Jerseys         10  Long-Sleeve Logo Jersey, M  Multi\n"
      ]
     }
    ],
@@ -224,10 +239,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0f1f4829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "💾 SAVING ENRICHED PRODUCT DATA\n",
+      "==================================================\n",
+      "✅ Enriched data saved to: C:\\temp\\samples\\Product_Samples.csv\n",
+      "📊 Total records: 315\n",
+      "📈 Total columns: 9\n",
+      "\n",
+      "📊 ENRICHMENT SUMMARY\n",
+      "==============================\n",
+      "Original products: 315\n",
+      "Category lookup entries: 48\n",
+      "Final enriched products: 315\n",
+      "\n",
+      "🎯 Category Distribution:\n",
+      "CategoryName\n",
+      "Road Bikes         43\n",
+      "Road Frames        33\n",
+      "Mountain Bikes     32\n",
+      "Mountain Frames    28\n",
+      "Touring Bikes      22\n",
+      "Touring Frames     18\n",
+      "Wheels             14\n",
+      "Tires and Tubes    11\n",
+      "Saddles             9\n",
+      "Jerseys             8\n",
+      "Name: count, dtype: int64\n",
+      "... and 34 more categories\n",
+      "\n",
+      "🔍 Data Quality Check:\n",
+      "Products with CategoryName: 315\n",
+      "Products missing CategoryName: 0\n",
+      "\n",
+      "📋 Final Column List:\n",
+      "Columns: ProductID, Name, Color, StandardCost, ListPrice, Size, Weight, CategoryID, CategoryName\n",
+      "\n",
+      "✅ Product enrichment complete!\n",
+      "📁 Output file: C:\\temp\\samples\\Product_Samples.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Save enriched data and display summary\n",
     "print(\"\\n💾 SAVING ENRICHED PRODUCT DATA\")\n",
