--- a/src/notebooks/data/Generate_Street_Addresses.ipynb
+++ b/src/notebooks/data/Generate_Street_Addresses.ipynb
@@ -17,7 +17,7 @@
     "- **Real city/state combinations** but wrong zip codes\n",
     "\n",
     "## Output\n",
-    "- File: `C:\\temp\\samples\\StreetAddress_samples.csv`\n",
+    "- File: `C:\\temp\\samples\\StreetAddress_Samples.csv`\n",
     "- Contains 520 unique street addresses for Location table\n",
     "\n",
     "---"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2ee0c7a8",
    "metadata": {},
    "outputs": [
@@ -33,9 +33,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "🗑️ Removed existing file: C:\\temp\\samples\\StreetAddress_Samples.csv\n",
       "🎯 GENERATING STREET ADDRESS SAMPLE DATA\n",
       "Sample Size: 513\n",
-      "Output: C:\\temp\\samples\\StreetAddress_samples.csv\n",
+      "Output: C:\\temp\\samples\\StreetAddress_Samples.csv\n",
       "==================================================\n",
       "🔄 Generating address data...\n",
       "✅ Address generation complete!\n"
@@ -57,7 +58,7 @@
     "# Configuration\n",
     "SAMPLE_SIZE = 513  # Number of address records to generate\n",
     "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
-    "OUTPUT_FILE = \"StreetAddress_samples.csv\"\n",
+    "OUTPUT_FILE = \"StreetAddress_Samples.csv\"\n",
     "\n",
     "# Create output directory\n",
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a4953b3c",
    "metadata": {},
    "outputs": [
@@ -341,7 +342,7 @@
       "  ✅ Incorrect zip codes: Real cities with wrong zips\n",
       "  ✅ No real addresses: All combinations are intentionally fake\n",
       "\n",
-      "💾 SAVED TO: C:\\temp\\samples\\StreetAddress_samples.csv\n",
+      "💾 SAVED TO: C:\\temp\\samples\\StreetAddress_Samples.csv\n",
       "📊 Total Records: 513\n",
       "📈 Columns: LocationId, CustomerId, LocationName, IsActive, AddressLine1, AddressLine2, City, StateId, ZipCode, CountryId, SubdivisionName, Region, Latitude, Longitude, Note\n",
       "\n",
