--- a/src/notebooks/schema/Model_Shared_Data.ipynb
+++ b/src/notebooks/schema/Model_Shared_Data.ipynb
@@ -2,67 +2,48 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2630d763",
+   "id": "b34be4c4",
    "metadata": {},
    "source": [
-    "# Shared Master Data - Simplified Version\n",
+    "# Semantic Model for Customer, Product, and Sales. Finance model in seperate file. \n",
     "\n",
-    "## Overview\n",
-    "This notebook contains all shared master data tables used across multiple business domains (Sales, Finance, etc.).\n",
-    "\n",
-    "## Key Benefits\n",
-    "- **Single source of truth**: Master data consistency across all domains\n",
-    "- **Flexible deployment**: Can be deployed as separate database or synchronized copies\n",
-    "- **Enterprise scalability**: Ready for additional domains (For example, Supply Chain)\n",
-    "- **Data governance**: Centralized master data management\n",
-    "\n",
-    "## Deployment Options\n",
-    "1. **Shared Database**: Both Sales and Finance reference same master data tables\n",
-    "2. **Synchronized Copies**: Each domain maintains local copy with sync processes\n",
-    "3. **Hybrid Approach**: Critical master data shared, operational data domain-specific\n",
-    "\n",
-    "## Master Data Categories\n",
-    "- **Customer Management**: Customer, Location, Relationships (7 tables)\n",
-    "- **Product Catalog**: Product, Category (2 tables)\n",
-    "\n",
-    "---"
+    "## Schema Structure\n",
+    "- **Customer Management (7 tables)**: Customer, CustomerTradeName, CustomerRelationshipType, Location, CustomerLocation, CustomerAccount, CustomerAccountLocation\n",
+    "- **Product Catalog (2 tables)**: Product, Category\n",
+    "- **Order Processing (3 tables)**: Order, OrderLine, OrderPayment\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b596a3",
+   "id": "27d6bf9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Shared Master Data Tables - Enterprise Foundation\n",
+    "# Simplified and enhanced data model based on out of the box Fabric Retail Data Models \n",
     "\n",
     "################################################################################################\n",
     "# Create Schema \n",
     "################################################################################################\n",
     "\n",
-    "# Configuration - Can be deployed as separate database\n",
-    "SCHEMA_NAME = \"master_data\"  # or \"retail_simple\" to keep in same database\n",
+    "# Configuration\n",
+    "SCHEMA_NAME = \"retail_simple\"\n",
     "spark.sql(f\"CREATE DATABASE IF NOT EXISTS {SCHEMA_NAME}\")\n",
     "print(f\"✅ {SCHEMA_NAME} schema ready!\")\n",
     "\n",
-    "print(f\"\\n🏢 CREATING SHARED MASTER DATA TABLES\")\n",
-    "print(\"=\"*60)\n",
-    "print(f\"📋 These tables will be referenced by:\")\n",
-    "print(f\"   • Sales Domain (Order, OrderLine, OrderPayment)\")\n",
-    "print(f\"   • Finance Domain (Invoice, Payment, Transaction)\")\n",
-    "print(f\"   • Future Domains (HR, Supply Chain, etc.)\")\n",
-    "print(\"=\"*60)\n",
     "\n",
     "################################################################################################\n",
-    "# CUSTOMER MASTER DATA\n",
+    "# Customers, Contact Info, and Locations. 7 Tables\n",
     "################################################################################################\n",
     "\n",
     "# 1. Create Customer table \n",
+    "#    It can be individuals, business, or government entities\n",
+    "#    If it is business, then CustomerTradeName table will be used to store the trade name\n",
+    "#    and the first name and last name will be the main contact person for the business\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Customer (\n",
     "    CustomerId STRING,\n",
-    "    CustomerTypeId STRING,\n",
+    "    CustomerTypeId STRING, --Individual, Business, Government\n",
     "    IsActive BOOLEAN,\n",
     "    CustomerNamePrefix STRING,\n",
     "    FirstName STRING,\n",
@@ -89,7 +70,8 @@
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerTradeName (\n",
     "    CustomerId STRING,\n",
-    "    TradeNameId STRING,\n",
+    "    CustomerTypeId STRING, --Individual, Business, Government\n",
+    "    TradeNameId STRING,   \n",
     "    PeriodStartDate DATE,\n",
     "    PeriodEndDate DATE,\n",
     "    CustomerTradeNameNote STRING\n",
@@ -102,7 +84,7 @@
     "# 3. Create CustomerRelationshipType table\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerRelationshipType (\n",
-    "    CustomerRelationshipTypeId STRING,\n",
+    "    CustomerRelationshipTypeId STRING,  -- Individual: Standard, Premium, VIP. Business: SMB, Premier, Partner. Government: Federal, State, Local.\n",
     "    CustomerRelationshipTypeName STRING,\n",
     "    CustomerRelationshipTypeDescription STRING\n",
     ")\n",
@@ -117,16 +99,17 @@
     "    LocationId STRING,\n",
     "    LocationName STRING,\n",
     "    IsActive BOOLEAN,\n",
-    "    LocationAddressLine1 STRING,\n",
-    "    LocationAddressLine2 STRING,\n",
-    "    LocationCity STRING,\n",
-    "    LocationStateId STRING,\n",
-    "    LocationZipCode STRING,\n",
+    "    AddressLine1 STRING,  -- \"1000 Main St\" \n",
+    "    AddressLine2 STRING,  -- \"Apt 5\" or \"Suite 200\"\n",
+    "    City STRING,\n",
+    "    StateId STRING,\n",
+    "    ZipCode STRING,\n",
     "    CountryId STRING,\n",
-    "    SubdivisionId STRING,\n",
-    "    LocationLatitude DECIMAL(10,7),\n",
-    "    LocationLongitude DECIMAL(10,7),\n",
-    "    LocationNote STRING\n",
+    "    SubdivisionName STRING,\n",
+    "    Region STRING,        -- \"Northeast\", \"West Coast\", \"Midwest\"\n",
+    "    Latitude DECIMAL(10,7),\n",
+    "    Longitude DECIMAL(10,7),\n",
+    "    Note STRING\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -152,14 +135,7 @@
     "    CustomerAccountId STRING,\n",
     "    ParentAccountId STRING,\n",
     "    CustomerAccountName STRING,\n",
-    "    CustomerAccountTypeId STRING,\n",
-    "    CustomerAccountOpenedDate DATE,\n",
-    "    CustomerAccountClosedDate DATE,\n",
-    "    CustomerAccountApplicationNumber STRING,\n",
     "    CustomerId STRING,\n",
-    "    ResponsibilityCenterId STRING,\n",
-    "    LedgerId STRING,\n",
-    "    LedgerAccountNumber STRING,\n",
     "    IsoCurrencyCode STRING\n",
     ")\n",
     "USING DELTA\n",
@@ -181,7 +157,7 @@
     "print(f\"✅ {SCHEMA_NAME}.CustomerAccountLocation table created!\")\n",
     "\n",
     "################################################################################################\n",
-    "# PRODUCT MASTER DATA\n",
+    "# Products - 2 Tables\n",
     "################################################################################################\n",
     "\n",
     "# 8. Create Product table\n",
@@ -213,9 +189,9 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.Product table created!\")\n",
     "\n",
-    "# 9. Create Category table\n",
+    "# 9. Create Brand table\n",
     "create_table_sql = f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Category (\n",
+    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Category(\n",
     "    CategoryId STRING,\n",
     "    ParentCategoryId STRING,\n",
     "    CategoryDescription STRING,\n",
@@ -228,32 +204,90 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.Category table created!\")\n",
     "\n",
-    "print(f\"\\n✅ All Shared Master Data tables created successfully!\")\n",
-    "print(f\"📊 Customer Master Data: 7 tables\")\n",
-    "print(f\"📊 Product Master Data: 2 tables\")\n",
-    "print(f\"📊 Total Master Data tables: 9\")\n",
     "\n",
-    "print(f\"\\n🔗 CROSS-DOMAIN REFERENCES:\")\n",
-    "print(f\"   • Sales Domain will reference: Customer, Product, Location\")\n",
-    "print(f\"   • Finance Domain will reference: Customer, Product\")\n",
-    "print(f\"   • Future Domains can reference any master data\")\n",
+    "################################################################################################\n",
+    "# Orders - 3 Tables\n",
+    "################################################################################################\n",
     "\n",
-    "print(f\"\\n🚀 DEPLOYMENT OPTIONS:\")\n",
-    "print(f\"   • Option 1: Change SCHEMA_NAME to 'master_data' for separate database\")\n",
-    "print(f\"   • Option 2: Keep SCHEMA_NAME as 'retail_simple' for single database\")\n",
-    "print(f\"   • Option 3: Deploy to cloud with data sync processes\")\n",
+    "# 10. Create Order table\n",
+    "create_table_sql = f\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Order (\n",
+    "    OrderId STRING,       -- Unique identifer like UUID\n",
+    "    OrderNumber STRING,   -- Customer-facing order number\n",
+    "    CustomerId STRING,\n",
+    "    CustomerAccountId STRING,\n",
+    "    OrderDate DATE,\n",
+    "    OrderStatus STRING,\n",
+    "    OrderTotal DECIMAL(18,2),\n",
+    "    SubTotal DECIMAL(18,2),\n",
+    "    TaxAmount DECIMAL(18,2),\n",
+    "    ShippingAmount DECIMAL(18,2), -- ShipingCost, Standard retail transaction terminology\n",
+    "    DiscountAmount DECIMAL(18,2),\n",
+    "    PaymentMethod STRING,\n",
+    "    ShippingAddress STRING,\n",
+    "    BillingAddress STRING,\n",
+    "    OrderNotes STRING,\n",
+    "    CreatedTimestamp TIMESTAMP,\n",
+    "    UpdatedTimestamp TIMESTAMP,\n",
+    "    IsoCurrencyCode STRING,\n",
+    "    StoreId STRING,\n",
+    "    Status STRING,\n",
+    "    SalesChannelId STRING,\n",
+    "    CreatedBy STRING \n",
+    ")\n",
+    "USING DELTA\n",
+    "\"\"\"\n",
+    "spark.sql(create_table_sql)\n",
+    "print(f\"✅ {SCHEMA_NAME}.Order table created!\")\n",
     "\n",
-    "print(f\"\\n📋 NEXT STEPS:\")\n",
-    "print(f\"   1. Run this notebook to create master data foundation\")\n",
-    "print(f\"   2. Update Sales Domain to reference master_data.Customer, master_data.Product\")\n",
-    "print(f\"   3. Update Finance Domain to reference master_data.Customer, master_data.Product\")\n",
-    "print(f\"   4. Generate sample data for master tables first\")"
+    "# 11. Create OrderLine table\n",
+    "create_table_sql = f\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderLine (\n",
+    "    OrderId STRING,\n",
+    "    OrderLineNumber INT,\n",
+    "    ProductId STRING,\n",
+    "    ProductName STRING,\n",
+    "    Quantity DECIMAL(18,2),\n",
+    "    UnitPrice DECIMAL(18,2),\n",
+    "    LineTotal DECIMAL(18,2),\n",
+    "    DiscountAmount DECIMAL(18,2),\n",
+    "    TaxAmount DECIMAL(18,2)\n",
+    ")\n",
+    "USING DELTA\n",
+    "\"\"\"\n",
+    "spark.sql(create_table_sql)\n",
+    "print(f\"✅ {SCHEMA_NAME}.OrderLine table created!\")\n",
+    "\n",
+    "# 12. Create OrderPayment table\n",
+    "create_table_sql = f\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderPayment (\n",
+    "    OrderId STRING,\n",
+    "    PaymentId STRING,\n",
+    "    PaymentMethod STRING,\n",
+    "    PaymentAmount DECIMAL(18,2),\n",
+    "    PaymentDate DATE,\n",
+    "    PaymentStatus STRING,\n",
+    "    TransactionId STRING\n",
+    ")\n",
+    "USING DELTA\n",
+    "\"\"\"\n",
+    "spark.sql(create_table_sql)\n",
+    "print(f\"✅ {SCHEMA_NAME}.OrderPayment table created!\")\n",
+    "\n",
+    "print(f\"✅ All {SCHEMA_NAME} tables created successfully!\")\n",
+    "print(f\"📊 Total tables created: 12\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
